 =======================================================================
 ==CHANGES.txt
 =======================================================================

Current Development

* GORA-452 Upgrade goraci prior to Chef and the ComputeService implementations 

* GORA-439 Remove Unused Method Parameters (Furkan KAMACI)

* GORA-240 Tests for MemStore (lewismc)
  
* GORA-446 java.util.NoSuchElementException thrown by accessing java.util.concurrent.ConcurrentSkipListMap.firstKey in MemStore (lewismc)
 
* GORA-125 Clean up logging libraries (lewismc)

* GORA-441 Update build.gradle within gora-gradle-plugin to reference canonical Apache links (lewismc)

* GORA-438 Erroneous Exception Message at IOUtils.java (Furkan KAMACI via lewismc)

Apache Gora 0.6.1 Release - 05/09/2015 (dd/mm/yyyy)
Release Report - http://s.apache.org/l69

* GORA-436 Improve Source Code as Java 7 Compatible (Furkan KAMACI via lewismc)

* GORA-435 Clean Up Code and Fix Potential Bugs (Furkan KAMACI via lewismc)

* GORA-433 Non-Final Public Static Fields Should Be Final (Furkan KAMACI via lewismc)

* GORA-314 Implement TestDriver for AccumuloStoreTest e.g. TODO in class (lewismc)

* GORA-417 Deploy Hadoop-1 compatible binaries for Apache Gora (lewismc)

* GORA-432 Simplify if Statements (Furkan KAMACI via lewismc)

* GORA-386 Gora Spark Backend Support (Furkan KAMACI, talat, lewismc)

* GORA-429 Implement Maven forbidden-apis plugin in Gora (lewismc, rmarroquin)

* GORA-228 java.util.ConcurrentModificationException when using MemStore for concurrent tests (Yasin Kılınç, cihad güzel, lewismc)

* GORA-419: AccumuloStore.put deletes entire row when updating map/array field (gerhardgossen via lewismc)

* GORA-420: AccumuloStore.createSchema fails when table already exists (gerhardgossen via lewismc)

* GORA-427 Configure MongoDB ReadPreference and WriteConcern (drazzib)

* GORA-426 MongoDB cursor timeout on long running parse job (Alexander Yastrebov via drazzib)
